apps/green/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: flux-system
  labels:
    app: database
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
      version: green
  template:
    metadata:
      labels:
        app: database
        version: green
    spec:
      containers:
      - name: database-app
        image: kirtigupta1234/github-flux-database:latest-1746793385
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 18082
            protocol: TCP
          - containerPort: 18083
            protocol: TCP
          - containerPort: 18084
            protocol: TCP
