apps/green/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-green
  namespace: flux-system
  labels:
    app: database
    version: green
spec:
  selector:
    app: database
    version: green
  ports:
    - name: http
      port: 18084
      targetPort: 18084
